Zaktualizowano komórki w notatniku: dodano listę imion, poprawiono obsługę błędów oraz dodano nowe elementy do sekcji markdown.

--- a/test_notatnik.ipynb
+++ b/test_notatnik.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "43c26747",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"test\")"
+    "imiona = [\"Jan\", \"Anna\", \"Piotr\", \"Kowalski\"]"
    ]
   },
   {
@@ -38,7 +38,81 @@
     "| imię | wiek   |\n",
     "|------|--------|\n",
     "| Tom  | 20     |\n",
-    "| Jane | 21     |"
+    "| Jane | 21     |\n",
+    "\n",
+    "`print(\"Hello World!\")`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87341db0",
+   "metadata": {},
+   "source": [
+    "- zrób w klasie swoją wersję BANKOMATU\n",
+    "- musi mieć stan konta\n",
+    "- musi mieć możliwość wpłaty\n",
+    "- musi mieć możliwość wyplaty\n",
+    "- musi mieć możliwość sprawdzenia stanu konta\n",
+    "- musi obsługiwać dowolny błąd :)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c0a97d45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "Koniec programu\n"
+     ]
+    }
+   ],
+   "source": [
+    "# obsługa błędów\n",
+    "\n",
+    "try:\n",
+    "    a = 10\n",
+    "    b = 2\n",
+    "    c = a / b\n",
+    "    print(c)\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"Nie można dzielić przez zero!\")\n",
+    "except NameError:\n",
+    "    print(\"Nie ma zmiennej o takiej nazwie!\")\n",
+    "except:\n",
+    "    print(\"Coś poszło nie tak...\")\n",
+    "finally:\n",
+    "    print(\"Koniec programu\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "076131d3",
+   "metadata": {},
+   "source": [
+    "tutaj jest wzór na pierwszy program w Pythonie: $a^2 + b^2 = c^2$\n",
+    "\n",
+    "$x_i, \\; x_{i+1}, \\; a^2, \\; a^{10}$\n",
+    "\n",
+    "$\\frac{a}{b}, \\; \\dfrac{1}{x+1}$\n",
+    "\n",
+    "$\\sqrt{x}, \\; \\sqrt[3]{y}$\n",
+    "\n",
+    "$\\sum_{i=1}^{n} i, \\;\n",
+    "\\prod_{k=1}^{n} k, \\;\n",
+    "\\lim_{x \\to \\infty} \\frac{1}{x}$\n",
+    "\n",
+    "$\\alpha, \\beta, \\gamma, \\pi, \\theta, \\infty\n",
+    "\\leq, \\geq, \\neq, \\approx$\n",
+    "\n",
+    "$\\begin{bmatrix}\n",
+    "1 & 2 \\\\\n",
+    "3 & 4\n",
+    "\\end{bmatrix}$"
    ]
   }
  ],
