Zaktualizowano notatnik: usunięto nieużywaną komórkę z listą imion oraz dodano nowe komórki z przypisaniem zmiennych imie i wiek.

--- a/test_notatnik.ipynb
+++ b/test_notatnik.ipynb
@@ -1,16 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "43c26747",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "imiona = [\"Jan\", \"Anna\", \"Piotr\", \"Kowalski\"]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "66537fda",
    "metadata": {},
@@ -58,19 +48,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "id": "43c26747",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imiona = [\"Jan\", \"Anna\", \"Piotr\", \"Kowalski\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c0a97d45",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.0\n",
-      "Koniec programu\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# obsługa błędów\n",
     "\n",
@@ -113,6 +104,27 @@
     "1 & 2 \\\\\n",
     "3 & 4\n",
     "\\end{bmatrix}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "a46be078",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imie = \"Tomek\"\n",
+    "wiek = 25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f3b4d142",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = [imie, wiek]"
    ]
   }
  ],
